--- a/HOLMLST_CH1/concepts_ch1.ipynb
+++ b/HOLMLST_CH1/concepts_ch1.ipynb
@@ -63,16 +63,13 @@
     "> - Dimensionality reduction\n",
     "> - Association rule learning\n",
     "\n",
-    "## 6. What type of Machine Learning algorithm would you use to allow a robot to\n",
-    "walk in various unknown terrains?\n",
+    "## 6. What type of Machine Learning algorithm would you use to allow a robot to walk in various unknown terrains?\n",
     "> - reinforcement training\n",
     "\n",
-    "## 7. What type of algorithm would you use to segment your customers into multiple\n",
-    "groups?\n",
+    "## 7. What type of algorithm would you use to segment your customers into multiple groups?\n",
     "> - Clustering if the data is not supervising\n",
     "\n",
-    "## 8. Would you frame the problem of spam detection as a supervised learning prob‐\n",
-    "lem or an unsupervised learning problem?\n",
+    "## 8. Would you frame the problem of spam detection as a supervised learning problem or an unsupervised learning problem?\n",
     "> - supervised learning\n",
     "\n",
     "## 9. What is an online learning system?\n",
@@ -81,16 +78,13 @@
     "## 10. What is out-of-core learning?\n",
     "> -  refers to processing data that is too large to fit, an algorithm which exploits external storage in order to support large data volumes that cannot be supported by primary internal memory\n",
     "\n",
-    "## 11. What type of learning algorithm relies on a similarity measure to make predic‐\n",
-    "tions?\n",
+    "## 11. What type of learning algorithm relies on a similarity measure to make predictions?\n",
     "> - instance based learning, that it simply learn of heart\n",
     "\n",
-    "## 12. What is the difference between a model parameter and a learning algorithm’s\n",
-    "hyperparameter?\n",
+    "## 12. What is the difference between a model parameter and a learning algorithm’ hyperparameter?\n",
     "> - One difference is parameters are parameters in general insted a hyperparameter is a parameter of a learning algorithm (not of the model). keep constant\n",
     "\n",
-    "## 13. What do model-based learning algorithms search for? What is the most common\n",
-    "strategy they use to succeed? How do they make predictions?\n",
+    "## 13. What do model-based learning algorithms search for? What is the most common strategy they use to succeed? How do they make predictions?\n",
     "> - The main strategy is to build a new model from a set of examples, which one will be use to make predictions\n",
     "\n",
     "## 14. Can you name four of the main challenges in Machine Learning?\n",
@@ -101,8 +95,7 @@
     "> - Excessively simple models that underfit the training data\n",
     "> - Excessively complex models that overfit the data \n",
     "\n",
-    "## 15. If your model performs great on the training data but generalizes poorly to new\n",
-    "instances, what is happening? Can you name three possible solutions?\n",
+    "## 15. If your model performs great on the training data but generalizes poorly to new instances, what is happening? Can you name three possible solutions?\n",
     "> - This could be a problems product of overfitting on the training datang data. Some solutions could be: improve the data(choose more representative datat that allows generalize better), train multiple models with various hyperparameters on the reduced training set, simplify the model, remove features or constraining the parameters\n",
     "\n",
     "## 16. What is a test set and why would you want to use it?\n",
